--- a/memory-bank/context/previous-context-yury-founder-discussions/@.__group_1871883508-group_id-1871883508-РСТ-Нивелир---ORG-3Y.md
+++ b/memory-bank/context/previous-context-yury-founder-discussions/@.__group_1871883508-group_id-1871883508-РСТ-Нивелир---ORG-3Y.md
@@ -1180,7 +1180,7 @@ https://t.me/c/1659837859/444
 2023-10-23-1641-%YuryMyshinskiy|1016927916%->%РСТ Нивелир - ORG|1871883508%: но 8800 овердохуя
 2023-10-23-1641-%YuryMyshinskiy|1016927916%->%РСТ Нивелир - ORG|1871883508%: двай найдем истину
 2023-10-23-1641-%YuryMyshinskiy|1016927916%->%РСТ Нивелир - ORG|1871883508%: посредине
-2023-10-23-1642-%herewegohereiam|134481873%->%РСТ Нивелир - ORG|1871883508%: [reply to 614] у меня ставка 50$, мы ее проговорили, я лучше буду трекать реальные часы чем как делают офисные сотрудники за чаем часы прозибают и тп, но и в тоже время overtime и прочее должны учитываться
+2023-10-23-1642-%herewegohereiam|134481873%->%РСТ Нивелир - ORG|1871883508%: [reply to 614] у меня ставка $hourly_rate, мы ее проговорили, я лучше буду трекать реальные часы чем как делают офисные сотрудники за чаем часы прозибают и тп, но и в тоже время overtime и прочее должны учитываться
 
 еще проговорили что трекаю звонки по 30$ потому что ты настаивал - ну ок
 2023-10-23-1643-%herewegohereiam|134481873%->%РСТ Нивелир - ORG|1871883508%: [reply to 630] Юр, я не  билю 176ч в месяц 0 - сейчас гляну сколько там
