--- a/memory-bank/Scrum/20251111-cfa-c4-reposcan-domains/20251111-1336-co-3a68/20251111-1336-c4-diagrams.md
+++ b/memory-bank/Scrum/20251111-cfa-c4-reposcan-domains/20251111-1336-co-3a68/20251111-1336-c4-diagrams.md
@@ -240,3 +240,71 @@ sequenceDiagram
   OB->>DB: Mark Outbox as SENT
 ```
 
+## ERD — Data Model (MVP)
+
+```mermaid
+erDiagram
+    INVESTOR ||--o{ ORDER : places
+    INVESTOR ||--|| WALLET : owns
+    ISSUANCE ||--o{ ORDER : refers
+    ISSUANCE ||--o{ PAYOUT : schedules
+    ORDER }o--|| WALLET : allocates
+    INVESTOR ||--o{ KYC_RESULT : has
+    INVESTOR ||--o{ COMPLAINT : files
+
+    INVESTOR {
+        uuid id
+        string email
+        string status
+    }
+
+    ISSUANCE {
+        uuid id
+        string code
+        string name
+        string status
+        date issue_date
+        date maturity_date
+        decimal nominal
+    }
+
+    ORDER {
+        uuid id
+        uuid investor_id
+        uuid issuance_id
+        decimal amount
+        string status
+        datetime created_at
+    }
+
+    WALLET {
+        uuid id
+        uuid investor_id
+        decimal balance
+        datetime updated_at
+    }
+
+    PAYOUT {
+        uuid id
+        uuid issuance_id
+        date due_date
+        decimal amount
+        string status
+    }
+
+    KYC_RESULT {
+        uuid id
+        uuid investor_id
+        string decision
+        string reason
+        datetime checked_at
+    }
+
+    COMPLAINT {
+        uuid id
+        uuid investor_id
+        string subject
+        string status
+        datetime created_at
+    }
+```
