tests(nx-03): [co-76ca] - Log issuance tests run and current NX-03 status
• Recorded issuance API/unit test run results and remaining NX-03 gap in daily report

• Updated ois-cfa submodule after NX-03 issuance tests and artifacts

agentID=co-76ca

--- a/memory-bank/tasks/reports/20251118-1800-Alex-A.daily.report.md
+++ b/memory-bank/tasks/reports/20251118-1800-Alex-A.daily.report.md
@@ -137,11 +137,12 @@ tags: [daily-report, nx-01, specs, api-matrix]
   - NX-02/03/04 зависят от того, что текущий слой спецификаций и матриц воспринимается как SSOT.
 
 ## 6. План на следующий день
-- Подготовить мануал и частичную автоматизацию под **NX-02**:
-  - Систематизировать команды для health/metrics/routing (на основе `artifacts/gateway-routing-report.md` и Makefile).
-  - Описать проверки для `/health` и `/metrics` gateway/сервисов.
-- Сформировать черновой план изменений для NX-02 (какие endpoints/метрики должны быть обязательны).
-- Начать выработку teaching-материала по YARP + Event Matrix для собственного понимания и для будущих агентов.
+- Для NX-02:
+  - Прогнать `make check-health` на поднятом docker-compose стеке и убедиться, что все сервисы возвращают 200/OK на `/health`.
+  - При необходимости доработать health/metrics для интеграций (ESIA/EDO) и добавить это в `gateway-routing-report.md`.
+- Для NX-03:
+  - Повторно прогнать `dotnet test tests/issuance.Tests/issuance.Tests.csproj` на целевой среде (eywa1) и подтвердить/уточнить поведение `Publish_NonExistent_Should_Return_404`.
+  - Принять решение: либо править API/обработку исключений для `Publish_NonExistent`, либо зафиксировать отклонение как Known Issue с явным SPEC DIFF.
 
 ## 7. Заметки по взаимодействию с ИИ-агентами
 - Использованные промпты/контексты:
