--- a/memory-bank/Scrum/20251118-wip-NX-tasks/20251118-2307-gem3-report.md
+++ b/memory-bank/Scrum/20251118-wip-NX-tasks/20251118-2307-gem3-report.md
@@ -122,3 +122,127 @@ git push origin main
 ```
 
 **Алекс, ты крут. Ты сдвинул монолит с места. Отдыхай.**
+
+# Output 2
+Привет, Алекс. Твой ментор на связи.
+
+Да, сделать NX-04, 05 и 06 реально, но **не пытайся скормить их агенту одновременно**. Это разные слои (Backend Logic vs Frontend UI vs Spec Design). Если смешаешь — получишь кашу из недоделанных файлов и конфликтов.
+
+**Моя рекомендация по стратегии (Sequential Execution):**
+
+1.  **NX-04 (Registry/Backend) — P0 Critical.** Без этого бэкенд не работает как надо. Сделай это первым. Это "мясо".
+2.  **NX-05 (Issuer UI) — P1.** Когда бэкенд готов, натягиваем на него UI дашборда.
+3.  **NX-06 (Schedule Spec) — P2.** Это проектирование (Spec Diff). Это можно делать на "остывание" после кодинга.
+
+Ниже я подготовил для тебя **три готовых блока команд** для твоего Bash-агента (Codex CLI или Claude CLI). Запускай их строго по очереди.
+
+---
+
+### 🚦 БЛОК 1: NX-04 (Backend Core Flow)
+
+**Суть:** Реализовать поток заказа (Create -> Reserve -> Paid) и убедиться, что события Kafka улетают.
+
+**Copy-Paste для терминала (запуск агента):**
+
+```bash
+# 1. Убедись, что ты в корне ois-cfa (worktree infra.defis.deploy)
+# 2. Запускаем агента с ролью Project-Guard (он знает границы проекта)
+
+codex --model gpt-5-high --file .claude/agents/project-guard-architect.prompt.md \
+  --file tasks/NX-04-registry-orders-flow.md \
+  --file docs/context/PROJECT-CONTEXT.md \
+  --file packages/contracts/openapi-registry.yaml \
+  --file packages/contracts/asyncapi.yaml \
+  --file services/registry/Services/RegistryService.cs \
+  --file services/settlement/Consumers/OrderPaidEventConsumer.cs \
+  -p "Привет. Давай выполним задачу NX-04 (Registry Order Flow).
+
+Твоя цель:
+1. Проанализировать текущий код RegistryService.cs и OrderPaidEventConsumer.cs.
+2. Сопоставить их с openapi-registry.yaml и asyncapi.yaml.
+3. Реализовать недостающую логику (или заглушки), чтобы цепочка 'Create Order -> Reserve -> Mark Paid' работала.
+4. Убедиться, что Outbox публикует события ois.order.* и ois.registry.transferred (сейчас в AsyncAPI они есть, а в коде продюсеров нет).
+5. Написать интеграционный тест в tests/registry.Tests (или обновить существующий), который проходит этот happy-path.
+
+Действуй пошагово:
+- Сначала анализ Gap (чего нет в коде).
+- Потом реализация (код).
+- Потом тесты.
+- В конце обнови artifacts/registry-flow-report.md.
+
+Не ломай существующую архитектуру. Используй .NET 9 синтаксис."
+```
+
+**После выполнения:**
+1. Проверь тесты: `dotnet test tests/registry.Tests` (или где он их создаст).
+2. `git add . && git commit -m "feat(registry): NX-04 implement order flow and events"`
+
+---
+
+### 🚦 БЛОК 2: NX-05 (Issuer Dashboard UI)
+
+**Суть:** Подключить реальные данные к дашборду эмитента. **Делай только после NX-04**, так как данные могут зависеть от стабильности бэкенда.
+
+**Copy-Paste для терминала:**
+
+```bash
+codex --model gpt-5-high --file .claude/agents/project-guard-architect.prompt.md \
+  --file tasks/NX-05-issuer-dashboard-and-reports.md \
+  --file docs/context/FRONTEND-CONTEXT.md \
+  --file packages/contracts/openapi-gateway.yaml \
+  --file apps/portal-issuer/app/dashboard/page.tsx \
+  --file apps/portal-issuer/app/reports/page.tsx \
+  -p "Привет. Переходим к задаче NX-05 (Issuer Dashboard).
+
+Твоя цель:
+1. Проанализировать openapi-gateway.yaml на предмет эндпоинтов для дашборда (issuances list, summary).
+2. Если нужных эндпоинтов для агрегации нет — создай файл 'tasks/NX-05-issuer-reports-SPEC-DIFF.md' с предложением изменений в API.
+3. В 'apps/portal-issuer' подключи TS SDK (или используй fetch) для загрузки реальных данных в Dashboard.
+4. Реализуй простую таблицу в /reports (список выпусков) с кнопкой экспорта CSV (client-side generation пока ок).
+5. Убедись, что UI не падает, если бэкенд недоступен (Error Boundary или Empty State).
+
+Не усложняй UI, используй существующие компоненты из shared-ui, если они есть. Главное — чтобы данные шли не из хардкода."
+```
+
+**После выполнения:**
+1. Запусти фронт: `cd apps/portal-issuer && npm run dev`.
+2. Проверь глазами.
+3. `git add . && git commit -m "feat(issuer): NX-05 connect dashboard to real api"`
+
+---
+
+### 🚦 БЛОК 3: NX-06 (Payout Schedule Spec)
+
+**Суть:** Это задача на **проектирование**. Тут не нужно писать сложный код бэкенда, нужно определить контракт.
+
+**Copy-Paste для терминала:**
+
+```bash
+codex --model gpt-5-high --file .claude/agents/project-guard-architect.prompt.md \
+  --file tasks/NX-06-issuer-payout-schedule-spec-and-ui.md \
+  --file packages/contracts/openapi-issuance.yaml \
+  --file apps/portal-issuer/app/issuances/[id]/page.tsx \
+  -p "Привет. Выполняем задачу NX-06 (Payout Schedule).
+
+Фокус — Spec-First.
+1. Проверь, есть ли в openapi-issuance.yaml методы для управления расписанием выплат (CRUD). Скорее всего нет.
+2. Создай документ 'tasks/NX-06-payout-schedule-SPEC-DIFF.md'. Опиши там YAML-патч для OpenAPI:
+   - POST /v1/issuances/{id}/schedule
+   - GET /v1/issuances/{id}/schedule
+   - DELETE ...
+3. В 'apps/portal-issuer' на странице деталей выпуска добавь Read-Only таблицу 'График выплат'.
+   - Если данных в API нет, покажи заглушку или данные из поля 'scheduleJson' (если оно есть в DTO выпуска).
+   - Поставь в UI пометку [Beta/Mock], если данные не настоящие.
+
+Не пиши реализацию контроллера в C#. Только Спека (Diff) и UI-компонент."
+```
+
+---
+
+### 💡 Советы от ментора
+
+1.  **Контроль контекста:** Обрати внимание, я в каждом промпте явно скармливаю агенту файл задачи (`tasks/NX-*.md`). Это критично, так как там лежит DoD (Definition of Done).
+2.  **Итеративность:** Если агент в NX-04 застрянет на тестах (как было с NX-03), проси его: *"Ок, зафиксируй тест как красный в artifacts/registry-flow-report.md, не зацикливайся, иди дальше"*. Нам нужно движение.
+3.  **Daily Report:** Когда закончишь эти три блока, просто попроси агента (любого): *"Сгенерируй Daily Report за сегодня по шаблону .claude/skills/daily-report.md, включи туда результаты NX-04, 05, 06"*. Он сам соберет фактуру.
+
+Начинай с **БЛОКА 1**. Удачи!
