--- a/memory-bank/Scrum/20251120/20251120-1450-oracle-pack/20251120-1502-gem3.oracle.md
+++ b/memory-bank/Scrum/20251120/20251120-1450-oracle-pack/20251120-1502-gem3.oracle.md
@@ -1,28 +1,5 @@
 # Prompt
-````prompt
-# Role 
-You're Oracle Evaluator! Also Ты — Senior .NET 9 + Next.js + Kubernetes/Infra архитектор и AI pair‑programmer.
-
-# DoD
-- [ ] ты проанализировал глубоко сессию посвященную задачам кодингу "eywa1-p-cfa-w12.p1-20251120-1445.session.txt" и сессию посвященную подготовке к легкому развертыванию в docker-compose на других серверах по ssh ключам в tmux сессиях cfa1,fin2,etc использовать поддомены Cloudflare-Cli все настраивать и тп "eywa1-p-cfa-w11.p1-20251120-1446.session.txt" и выдал мне финальный deep understanding этого summary в таблице и mermaid
-- [ ] когда ты анализировал глубоко сессию посвященную задачам кодингу "eywa1-p-cfa-w12.p1-20251120-1445.session.txt" ты учитывал context.txt and "20251119-20-gem3-aistudio-thread-code-session-NX05-08.oracle.session.json" что я переключался между тем чтобы проверять агента и генерить ему corrections copypaste, угляди - что оба Gemini3-Evaluator and Gpt5.1-Cli-Max упустили и все ли ок? Дай финальную оценку в table плюс визуализируй в mermaidjs. А также дай DoD, Kickoff которые стоит сделать перед тем как переходить к deploy этих изменений и проверке
-- [ ] в сессии "eywa1-p-cfa-w11.p1-20251120-1446.session.txt" хоть агент и поднял на server `cfa1` domains `*.cfa1.llmneighboors.com` но там на самом деле не все хорошо, не работает авторизация, в отличии от server `uk1` `*.cfa.llmneighboors.com` где я дожал и работает (сессия uk1 1.8mb не прикладывается слишком большая eywa1-p-cfa-w6.p1-20251118-1503-co-3dd7.session.md ) но в целом просто вычитывам все доки может ты поймешь в чем проблема. А также новые вводные есть новый CLOUDFLARE_CFA_EMAIL=aa@multipass.org
-- [ ] стоит ли ставить уже задачу чтобы чинил все на cfa1 и накататывал и перепривязал на `*.cfa.telex.global` ? мне кажется стоит там накатывать `infra.defis.deploy` branch и как раз все доделывать и наконец воочию смотреть - финальные точки вплоть до e2e playwright на новые kyc методы и что реализовано в тасках NX01-08 все мы проверяем на `*.cfa.telex.global` и нужно спроектировать серию промптом и контекстов к этому.
-```
-Смотри, нужно добавить информацию что новый аккаунт я добавил креды в `/home/user/__Repositories/cloudflare__developerisnow 
-/.env` 
-
-CLOUDFLARE_CFA_EMAIL=aa@multipass.org
-CLOUDFLARE_CFA_PASS=@$g...D
-CLOUDFLARE_CFA_API_GLOBAL=e918...f610
-CLOUDFLARE_CFA_API_TOKEN=_I2ne...QD6
-CLOUDFLARE_CFA_ACCOUNT_ID=c41ad...867
-
-Там делать все на домене "telex.global" поддомены `*.cfa{n}.telex.global` теперь
-```
-
-Может я что-то еще не учел, также будь моим ментором и учителем, подсвети. 
-````
+"./20251120-1457-prompt2.oracle.md"
 # Output 
 Привет, Алекс. Я — Oracle. Включаю режим **Grand Architect & Mentor**.
 
