--- a/memory-bank/Scrum/20251120/20251120-1450-oracle-pack/20251120-1712-eval-on-eval.gpt5p.oracle.md
+++ b/memory-bank/Scrum/20251120/20251120-1450-oracle-pack/20251120-1712-eval-on-eval.gpt5p.oracle.md
@@ -5,6 +5,247 @@
 | 1     |     |
 | 2     |     |
 | 3     |     |
+# 1.1.
+Сразу по сути: в твоём контексте (ты + пачка ИИ‑агентов) **главный стандарт — “Task Spec с DoD + Kick‑Off + Частые грабли”**.
+User Stories и формальный Scrum‑зоопарк — опциональны, не базовые.
+
+---
+
+## 1. Какую минимальную систему я бы зафиксировал
+
+### 1️⃣ Уровни
+
+Я бы оставил три уровня:
+
+1. **Epic / NX‑task** – NX‑05, NX‑06, NX‑07 и т.д.
+2. **Task Spec (одна Markdown‑страница)** – то, как у тебя уже выглядят NX‑05/NX‑06: frontmatter, TL;DR, Scope, Plan, DoD. 
+3. **Execution / Sessions** – отдельные файлы в `memory-bank` под конкретные прогонки агентов, где уже лог и мелкие подзадачи.
+
+То есть *никаких дополнительных сущностей* (Story, Subtask, Feature‑ticket) — они по сути уже “спрятаны” внутри одного Task Spec.
+
+---
+
+## 2. DoD vs User Story / Acceptance Criteria
+
+**По факту: Acceptance Criteria = детальный DoD.**
+
+Для тебя и агентов достаточно:
+
+* **Global DoD** для проекта/репы – что в принципе считается “done” (тесты зеленые, спеки не протухли, UK1 жив, etc).
+* **Per‑task DoD** – чек‑лист именно для этой NX‑таски.
+
+User Story с формулой “As a … I want … so that …” реально нужна только когда:
+
+* Надо *договориться про UX/поведение* с бизнесом/другими людьми.
+* Нужно описать пользовательские сценарии, а не тех‑инфраструктуру.
+
+В твоих задачах типа:
+
+* “Развернуть CFA на новом VPS как Control Plane” 
+* “Довести issuer dashboard/reports до живых данных” 
+
+— **формальные User Stories дают мало пользы**. Всё, что нужно, прекрасно ложится в:
+
+* TL;DR
+* Scope (что входит / не входит)
+* DoD + Tests
+* “Known pitfalls / regression checklist”
+
+---
+
+## 3. Kick‑Off: это твой Definition of Ready
+
+То, что ты называешь Kick‑Off Task, — по сути **Definition of Ready для агента**:
+
+* “Что должно быть уже готово и проверено, прежде чем он начнёт ковырять код/сервер”.
+
+Для тебя и агентов Kick‑Off критически важен, потому что:
+
+* ты часто заходишь в задачу “с разогнанной головой”;
+* агенту нужно *жёсткое* перечисление: `ветка`, `worktree`, `env`, `куда писать артефакты`.
+
+### Kick‑Off я бы всегда делал отдельной секцией в Task Spec
+
+Например:
+
+```md
+## Kick‑Off / Definition of Ready
+
+Перед стартом агент обязан:
+
+- [ ] Ветка: `tasks/NX-05-issuer-dashboard-and-reports` локально существует, worktree `wt__ois-cfa__NX05` — в состоянии `git status: clean`.
+- [ ] Symlink `memory-bank` в ворктри не сломан.
+- [ ] Проверен доступ к uk1/cfa1/eywa1 (ssh, ключи).
+- [ ] Прочитан `PROJECT-CONTEXT.md`, `FRONTEND-CONTEXT.md`, соответствующий NX‑task.
+- [ ] Понять, **на каком стенде** будут проверки (uk1 vs cfa1/fin2) и зафиксировать это в начале сессии.
+```
+
+Агент всегда начинает с этого чек‑листа → меньше сюрпризов.
+
+---
+
+## 4. Что обязательно должно быть в хорошем Task Spec (для тебя и агентов)
+
+Берём то, как у тебя уже сделаны:
+
+* `10-eywa1-control-plane-runbook.md` (Phases, DoD, Kickoff prompt), 
+* обновлённый NX‑05 Task Spec с frontmatter, TL;DR, DoD, таблицами. 
+
+и фиксируем **единую структуру**:
+
+```md
+---
+created: 2025-11-XX
+updated: 2025-11-XX
+type: task-spec
+topic: NX-0X-...
+author: alex-a
+tags: [nx-0x, backend, infra, ...]
+---
+
+# NX‑0X — Короткое человеко‑понятное название
+
+## 1. TL;DR / Goal
+
+- 2–4 буллета: что должно появиться/работать после завершения.
+
+## 2. Context & Links
+
+- 3–8 ссылок: PROJECT‑CONTEXT, FRONTEND‑CONTEXT, C4, reposcan, предыдущие NX‑reports.
+- 1–2 строки: в чём связь с другими NX (например, NX‑05 опирается на NX‑01..04).
+
+## 3. Scope
+
+### 3.1 In Scope
+- Конкретные блоки (backend X, frontend Y, тесты Z).
+
+### 3.2 Out of Scope
+- Что НЕ трогаем (uk1 config, Keycloak realm, старые домены и т.п.).
+
+## 4. Plan / How
+
+- 4–8 пронумерованных шагов верхнего уровня (как в твоих Phases).
+
+## 5. Kick‑Off / Definition of Ready
+
+- Чек‑лист по веткам, ворктри, env, доступам, подготовленным файлам.
+
+## 6. DoD / Acceptance Criteria
+
+Разбить на подподразделы:
+
+### 6.1 Outputs / Artefacts
+- [ ] Какие файлы/скрипты/страницы должны появиться/обновиться.
+- [ ] Где лежат новые артефакты (docs/artifacts/…, memory‑bank/...).
+
+### 6.2 Behaviour / Tests
+- [ ] Какие команды/тесты должны проходить (unit/integration/e2e).
+- [ ] Какие URL/flows руками проверить.
+
+### 6.3 Hygiene / Regression & Pitfalls
+- [ ] Не поменялись несовместимо спецификации (инвентаризация SPEC DIFF).
+- [ ] Не остались старые realms/env/доменные имена.
+- [ ] Не сломаны предыдущие стенды (например, UK1 остаётся как был).
+
+## 7. Known pitfalls / Frequent mistakes
+
+Список “пупырышек”, основанный на прошлых фейлах:
+
+- “Агент забыл убрать старый cfa1 realm → нужно явно проверять X.”
+- “В инструкциях забывали описать ручной Kick‑Off → теперь отдельный чек‑лист.”
+
+## 8. Notes / Open questions
+
+Что пока не до конца ясно и надо уточнять у себя/Александра.
+```
+
+Важно: **DoD у тебя = Acceptance Criteria.** Можно вообще не разводить два термина.
+
+---
+
+## 5. Когда всё-таки использовать User Stories
+
+Я бы оставил User Stories **только для UX/бизнес фич**:
+
+* новые сценарии инвестора / эмитента;
+* изменения UI, где важно сформулировать пользу.
+
+Тогда:
+
+* Вверху Task Spec (в TL;DR или отдельным блоком) 1–3 User Story,
+* А ниже — технический Plan/DoD, как сейчас.
+
+Например:
+
+```md
+### User Stories (optional)
+
+- As an issuer, I want to see total active issuance volume on dashboard so that I can quickly assess my exposure.
+- As an issuer, I want a payouts report by issuance so that I can reconcile with bank statements.
+```
+
+И всё. Больше никакой Jira‑машины вокруг.
+
+---
+
+## 6. Отвечаю на твой главный вопрос
+
+> Definition of Done и Kick-Off Task это активно покрывает, или User Stories, Acceptance Criteria — или вот как лучше поступать?
+
+**Для тебя и агентов:**
+
+* **Обязательное ядро:**
+
+  * Task Spec (как NX‑05 сейчас)
+  * **Kick‑Off секция** (Definition of Ready)
+  * **DoD секция** (включает и Acceptance Criteria, и регрессионный чек‑лист)
+  * “Known pitfalls” как отдельный блок.
+
+* **Опциональное, только где реально надо:**
+
+  * User Stories — для продуктовых/UX‑штук, не для инфраструктуры/деплоя.
+  * Дополнительная иерархия (epic/story/subtask) — только если это нужно для коммуникации с людьми, а не для агентов.
+
+Если очень коротко:
+**ты уже сделал почти идеальный формат Task Spec + DoD/Kick‑Off (см. обновлённый NX‑05 и eywa1 runbook)** — я бы зафиксировал его как *единственный стандарт* и перестал усложнять иерархию. Вместо добавления новых слоёв — *просто* дисциплинированно дописывать в DoD блок “Regression & Known pitfalls” после каждого реального фейла.
+
+---
+
+Если хочешь, следующим шагом могу:
+
+* упаковать это в **один готовый Markdown‑шаблон** для `tasks/` (под твой frontmatter и стиль Александра);
+* отдельно — мини‑шпаргалку “как читать этот Task Spec” для агентов, чтобы они явно тикали DoD в конце ответа.
+
+# 1 Gpt5pro based on prompt  1
+Я уже всё переварил: 5 Gemini‑потоков, твой анализ, w11/w12 и oracle‑pack. Вкратце: картинка у всех одна и та же, просто разной гранулярности. Ниже — мой финальный синтез: что реально делать, что выбросить из фокуса и как это оформить в одну таблицу.
+
+---
+
+## 1. Финальный вердикт: что важно, что можно выкинуть из головы
+
+### 1.1. Три **реально критичных** зоны
+
+Все отчёты (твои, Gemini и GPT‑5) сходятся на трёх «красных лампочках» — я это принимаю как ground truth: 
+
+1. **NX‑07 = «потёмкинский» KYC**
+
+   * UI и React Query‑клиент в backoffice есть, но бэкенда под них нет: фронт шлёт запросы через `apiClient.getKycApplications / getKycDocuments / makeKycDecision / uploadKycDocuments`, а соответствующих контроллеров/эндпоинтов в .NET нет. 
+   * Если сейчас выкатываться — KYC будет либо падать, либо работать на моках.
+   * **Вывод:** без минимального backend slice NX‑07 в прод пускать нельзя.
+
+2. **Auth/Keycloak на cfa1 сломан по конфигу**
+
+   * Корень: Keycloak живёт в старой реальности (UK1/`llmneighbors.com`), а окружение — уже в другой: env’ы и Nginx говорят одно, Redirect URIs и `rootUrl` в Keycloak DB — другое. 
+   * Gemini 1502 очень чётко поймал именно это и предложил правильный паттерн: не крутить руками админку, а сделать скрипт на `kcadm.sh`, который «прижигает» URIs под нужный домен. 
+
+3. **Deploy‑скрипты и права**
+
+   * В ходе аудита нашлась классика: `deploy-node.sh` иногда формирует рабочий каталог с правами `root`, после чего `npm install` ломается с `EACCES` и приходится всё чинить руками. 
+   * Рецепт уже есть: жёсткий `chown -R user:user $REMOTE_PROJECT_ROOT` (а не «hint» в комментариях). 
+
+> Всё остальное (zip/*, worktree‑гигиена, mermaid‑диаграммы в ТЗ и т.п.) — **вторично для текущей цели**. Да, это важно для долговременного здоровья репо, но не блокирует запуск стенда.
+
+---
 
 # 3.1 Gpt5pro based on prompt 3.1
 Начну с главного: на уровне архитектуры твоя интуиция верная — **доводим cfa1 до “как UK1” на старом домене, потом аккуратно перекидываем его на новый Cloudflare‑аккаунт / `*.cfa1.telex.global`**, уже с понятным Auth‑состоянием. Всё остальное — вокруг этого.
