--- a/memory-bank/Scrum/20251121/20251121-1610-nx05-08-cfa1-dod-kickoff.md
+++ b/memory-bank/Scrum/20251121/20251121-1610-nx05-08-cfa1-dod-kickoff.md
@@ -58,3 +58,8 @@ tags: [cfa1, deploy, dod, kickoff, verification]
 - NX06: расписание payouts не проверено (нет публичного issuance id/scheduleJson) — blocked by missing demo data.
 - NX07: backoffice auth исправлен (Keycloak secret + роли), UI `/kyc` отображается с mock fallback; API `/v1/compliance/kyc` 401, `kyc/{id}` 404, decision 405, `/v1/identity/users` 200. Playwright `backoffice-kyc.spec.ts` @ 2025-11-21-1550 зелёный.
 - NX08: UI `/audit` отображается (mock fallback); API `/v1/audit` 401, `/v1/audit/{id}` 404. Playwright `backoffice-audit.spec.ts` @ 2025-11-21-1550 зелёный.
+
+## Статус 2025-11-23-1255 (cfa1 quick check)
+- Keycloak realm `ois-dev`: demo пользователи issuer@test.com, investor@test.com, backoffice-admin → пароли сброшены на `Passw0rd!`, роли issuer/investor/backoffice/admin назначены.
+- NX05: Playwright `tests/e2e-playwright/tests/issuer-reports.spec.ts` зелёный на cfa1 (issuer@test.com / Passw0rd!). UI `/dashboard` и `/reports` открываются после логина.
+- NX07: Playwright `tests/e2e-playwright/tests/backoffice-kyc.spec.ts` зелёный на cfa1 (backoffice-admin / Passw0rd!). `/kyc` страница рендерится (данные зависят от backend).
