task(cicd) gpt5pro zero-shot catch what I want

--- a/memory-bank/Scrum/20251126/20251126-1805-aistudio-gem3.oracle.md
+++ b/memory-bank/Scrum/20251126/20251126-1805-aistudio-gem3.oracle.md
@@ -1005,3 +1005,301 @@ eywa1-p-cfa-w19.p1-20251126-1951.session.txt
   зарегистрировать runner и все доделать?
 
 ````
+
+# Prompt 5
+````prompt
+Так, смотри, внимательно изучи то, что сделал агент. Какие реально jobs to be done были выполнены, какие реально definitions of done выполнены и что у нас по факту получается реализовано, потому что это какие-то препятствия.
+
+Ну, я имею в виду, что естественно должны быть подняты сервисы и всё остальное, всё должно работать. Что у нас, мы на месте топчемся, какую-то недоделку делаем?
+
+Сейчас я покажу тебе вот сессию там, где localhost агент пытался поднимать всё. Это явно не тот результат, который типа ты мне сейчас запровадил.
+
+Сейчас я тебе ещё покажу агент, который типа доделывал CFA, чтобы тот работал на сервере. Это должно быть доделано нормально.
+
+Вот, давай сейчас напрягись и всё сделай по красоте. А я тебе даю системные инструкции. Всё нормально, давай делай.
+
+
+$YSTEM_PROMPT-COPYPASTE
+eywa1-p-cfa-w17.p1-20251126-2014.session.txt
+140,295 tokens
+file thumbnail
+eywa1-p-cfa-w16.p1-20251123-2259.session.txt
+17,586 tokens
+````
+# Output 4
+Принято. Ошибка предыдущего подхода понятна: имея `GITLAB_USER_CICD_TOKEN` (Admin/Maintainer), заставлять человека руками копировать токены — это **anti-pattern**.
+
+Мы переходим к **Full Automation Mode**.
+
+### 1. REQUIREMENTS_FROM_VOICE
+
+**Explicit:**
+- **Source of Truth:** `.env` файл с `GITLAB_USER_CICD_TOKEN` (находится на 2 уровня выше или в корне workspace).
+- **Automation:**
+    - Получить Project ID через API.
+    - Создать Runner через API (получить токен `glrt-`).
+    - Зарегистрировать Runner на `vds1` через SSH.
+    - Сгенерировать SSH-ключи для деплоя.
+    - Залить приватный ключ в GitLab CI Variables через API.
+    - Залить публичный ключ на `cfa2` через SSH.
+- **Scope:** Работаем в `infra-ci-setup` (или создаем новую, если занята).
+- **Agent Location:** `eywa1` (Control Plane).
+
+**Implicit:**
+- Агент должен написать скрипт-оркестратор (`ops/scripts/auto-setup-ci.sh`), который сделает всё это за один прогон.
+- Не использовать deprecated `registration_token` (общий), использовать создание раннера через API (`POST /user/runners` -> `authentication_token`).
+
+---
+
+### 2. UPDATED_JTBD_CONTRACT
+
+**Jobs:**
+1.  **J1: Scripting Automation**
+    - Написать `ops/scripts/auto-setup-ci.sh`.
+    - Скрипт должен парсить `.env`, использовать `curl` + `jq` для общения с GitLab API.
+2.  **J2: Execution & Provisioning**
+    - Запустить скрипт.
+    - Результат: Runner онлайн, переменные в GitLab залиты, ключи на `cfa2` прописаны.
+3.  **J3: Pipeline Trigger**
+    - Сделать пустой коммит (или реальный с конфигом), чтобы триггернуть пайплайн и убедиться, что он подхватился раннером.
+
+**DoD:**
+- [ ] Скрипт `auto-setup-ci.sh` лежит в репо.
+- [ ] GitLab Runner на `vds1` имеет статус `online` (проверка через API).
+- [ ] Переменная `SSH_PRIVATE_KEY` существует в CI/CD Settings проекта.
+- [ ] Пайплайн запущен и не висит в `pending` (взял задачу).
+
+---
+
+### 3. AGENT_PROMPT (For Codex-CLI on `eywa1`)
+
+```markdown
+ROLE: You are a Senior DevOps Engineer automating CI/CD bootstrap via GitLab API.
+LOCATION: `eywa1` (Control Plane).
+REPO PATH: `/home/user/__Repositories/yury-customer/prj_Cifra-rwa-exachange-assets/repositories/customer-gitlab/ois-cfa`
+BRANCH: `infra-ci-setup` (checkout or create).
+
+CONTEXT:
+- You have `GITLAB_USER_CICD_TOKEN` in `../../.env` (relative to repo root).
+- You have root SSH access to `vds1` and `user` SSH access to `cfa2`.
+- Goal: Fully automated setup without human copy-pasting.
+
+JOB TO BE DONE (J1): Create and Run `ops/scripts/auto-setup-ci.sh`
+
+**Script Logic Requirements (`auto-setup-ci.sh`):**
+1.  **Env Loading:** Load `GITLAB_USER_CICD_TOKEN` from the parent `.env` file.
+2.  **Dependencies:** Ensure `jq` is installed on `eywa1` (install if missing via sudo).
+3.  **GitLab Discovery:**
+    - Fetch Project ID for `npk/ois-cfa` via `GET /projects`.
+4.  **Runner Automation:**
+    - Call `POST /user/runners` (or `/projects/:id/runners`) to create a Project Runner.
+    - Payload: `runner_type: project_type`, `project_id: <ID>`, `tag_list: ["vds1", "docker"]`.
+    - **Capture the `token`** (Authentication Token) from JSON response.
+    - SSH into `vds1`:
+        - Install docker & gitlab-runner (if missing).
+        - Run `gitlab-runner register` non-interactively using the captured token.
+        - Template: `gitlab-runner register --non-interactive --url https://git.telex.global/ --token $TOKEN --executor docker --docker-image docker:24-dind --docker-privileged`.
+5.  **Deploy Key Automation:**
+    - Generate `ed25519` keypair locally (temp file).
+    - SSH into `cfa2`: Append public key to `~/.ssh/authorized_keys`.
+    - Call GitLab API `POST /projects/:id/variables`:
+        - Key: `SSH_PRIVATE_KEY`
+        - Value: <content of private key>
+        - Type: `env_var`
+        - Protected: false (for now), Masked: false (multiline keys often fail masking).
+    - Delete temp keys.
+6.  **Verification:**
+    - Trigger a pipeline or push a commit to verify the runner picks it up.
+
+**EXECUTION STEPS:**
+1.  Switch to branch `infra-ci-setup`.
+2.  Write the script.
+3.  Run the script.
+4.  Commit the script and `.gitlab-ci.yml` (if modified).
+5.  Report the Pipeline URL.
+
+**CONSTRAINTS:**
+- Do NOT ask user for tokens.
+- Do NOT fail if resources already exist (handle idempotency where possible, e.g., overwrite variable if exists).
+- Use `set -e` in script for safety.
+
+**FINAL OUTPUT:**
+- Link to the running pipeline.
+- Confirmation that Runner is Online.
+```
+
+---
+
+### 4. NEXT_STEPS_FOR_HUMAN
+
+1.  **Запустить агента** с промптом выше.
+2.  **Проверить:** После завершения работы агента, просто кликнуть на ссылку пайплайна.
+3.  **Manual Check (Optional):** Зайти в Settings -> CI/CD -> Variables и убедиться, что `SSH_PRIVATE_KEY` создался.
+
+### 5. VISUAL FLOW
+
+```mermaid
+sequenceDiagram
+    participant Script as auto-setup-ci.sh (eywa1)
+    participant GL_API as GitLab API
+    participant VDS1 as Runner Host
+    participant CFA2 as Deploy Target
+
+    Script->>GL_API: GET Project ID
+    Script->>GL_API: POST Create Runner -> Get Token
+    Script->>VDS1: SSH install & register runner (Token)
+    Script->>Script: Generate SSH Keys
+    Script->>CFA2: SSH install Public Key
+    Script->>GL_API: POST Create Variable SSH_PRIVATE_KEY
+    Script->>GL_API: Trigger Pipeline
+```
+
+# prompt 5
+````prompt
+Слушай, по факту не только это должно работать. Я же тебе всё подгрузил, что за пиздец ты мне выдал? Ты как будто не читаешь.
+
+Я тебя подгрузил сессию с агентом, который localhost, сессию с агентом, который CFA-1 развёртывал, который там типа тестил. У тебя должно быть понимание, как добиться сначала по коммиту, что юнитится, а потом следующая фаза — что он реально поднимает, что все порталы работают. Там же всё это написано в промптах.
+
+Давай доделай нормальное. Комплектный промпт, прямо в промпте ему напиши все job to be done, все definition, все kick-off task. Заверни это в луп, чтобы он коммитил, тестировал, verify work. Если доделал фазу, то переходит к следующей и так далее. То есть разбей на все эти кусочки, сделай ему большой промпт.
+````
+# Output 5
+Принято. Я пересмотрел контекст. Ты прав, я слишком упростил задачу в прошлом ответе.
+
+**Исправляем ситуацию.**
+Я изучил логи `localhost-agent` (где мы добились работы через `make up-local` на Docker без PM2) и `cfa1-agent` (где были проблемы с Swagger и Kafka).
+
+**Ключевые инсайты из логов, которые нужно внедрить в CI/CD:**
+1.  **Build Context:** Билдить нужно из **корня** монорепо, а не из папки приложения (так как есть зависимости от `packages/`). В прошлом логе CI упал именно на этом (`COPY failed`).
+2.  **Docker-only:** На целевом сервере (`cfa2`) не должно быть PM2. Фронты должны быть упакованы в Docker-контейнеры (как мы сделали в `make up-local`).
+3.  **Env Vars:** На `cfa2` нужно доставить правильный `.env`, который соответствует Docker-сети (имена контейнеров вместо localhost).
+4.  **Health Checks:** Не просто "запустилось", а `curl /health` должен вернуть 200.
+
+Ниже — **полный, жесткий промпт** для агента, который разобьет работу на фазы и доведет CI/CD до рабочего состояния.
+
+---
+
+### 1. UPDATED_JTBD_CONTRACT
+
+**Jobs:**
+1.  **J1: Fix CI Build Context & Registry.**
+    - Настроить `.gitlab-ci.yml` так, чтобы **все** сервисы (Gateway, Identity, Issuance, Registry, Settlement, Compliance) и **все** фронты (Issuer, Investor, Backoffice) собирались из корня репо и пушились в Registry.
+2.  **J2: Deploy Configuration (IaC).**
+    - Написать скрипт (или шаг CI), который генерирует `docker-compose.yml` и `.env` на целевом сервере (`cfa2`).
+    - Конфиг должен повторять успех `make up-local`: фронты в докере, правильные порты.
+3.  **J3: Deployment & Verification.**
+    - Реализовать Deploy Job: SSH -> Pull -> Up.
+    - Реализовать Verify Job: Curl health checks по всем сервисам.
+
+**DoD:**
+- [ ] Pipeline в GitLab зеленый (Build + Deploy).
+- [ ] На `cfa2` запущены все контейнеры (`docker ps`).
+- [ ] Порталы открываются (курлом или браузером) и отдают HTML.
+- [ ] Бэкенды отдают 200 на `/health`.
+
+---
+
+### 2. AGENT_PROMPT (Copy-paste to Codex-CLI on `eywa1`)
+
+```markdown
+ROLE: You are a Senior DevOps Engineer.
+LOCATION: `eywa1` (Control Plane).
+REPO PATH: `/home/user/__Repositories/yury-customer/prj_Cifra-rwa-exachange-assets/repositories/customer-gitlab/ois-cfa`
+BRANCH: `infra-ci-setup`
+
+CONTEXT & INSIGHTS (READ CAREFULLY):
+1.  **Localhost Success:** We successfully achieved a fully Dockerized stack (Backends + Frontends) via `make up-local`. NO PM2 on the server.
+2.  **Build Context:** Previous CI attempts failed because `docker build` was run inside subfolders. You MUST run `docker build -f apps/api-gateway/Dockerfile .` (from root) to allow access to `packages/`.
+3.  **Target (`cfa2`):** A clean Ubuntu server. It needs a `docker-compose.yml` and `.env` delivered to `/srv/cfa` before deployment.
+4.  **Runner (`vds1`):** Already registered (if not, fix it first).
+
+GLOBAL GOAL:
+Create a GitLab CI/CD pipeline that builds ALL services and deploys them to `cfa2`, ensuring the system actually works (health checks pass).
+
+---
+
+### WORKFLOW LOOP (MANDATORY)
+For each Phase below, execute this loop:
+1.  **PLAN:** Check current state. Define the exact file edits.
+2.  **EXECUTE:** Edit files (`.gitlab-ci.yml`, scripts).
+3.  **VERIFY:** Run `git commit` & `git push`. Watch the pipeline output (via API or link).
+4.  **AUDIT:** Did the job pass? If failed, fix immediately. Do not proceed to the next phase until green.
+
+---
+
+### PHASE 1: FIX BUILD PIPELINE (J1)
+**Goal:** All backend services and frontends build and push to GitLab Registry.
+
+**Tasks:**
+1.  Modify `.gitlab-ci.yml`.
+2.  Create a reusable `.build_template`.
+3.  Define jobs for:
+    - `build-api-gateway`
+    - `build-identity`, `build-issuance`, `build-registry`, `build-settlement`, `build-compliance`
+    - `build-bank-nominal`
+    - `build-portal-issuer`, `build-portal-investor`, `build-backoffice`
+4.  **CRITICAL:** Ensure `docker build` context is `.` (root).
+5.  **CRITICAL:** Use `docker:24-dind` service.
+
+**Verification:** Push and confirm all Build jobs pass.
+
+---
+
+### PHASE 2: DEPLOY PREPARATION (J2)
+**Goal:** Deliver configuration to `cfa2`.
+
+**Tasks:**
+1.  Create a script `ops/scripts/generate-deploy-config.sh` (or inline in CI).
+2.  This script must SSH into `cfa2` and:
+    - Create `/srv/cfa/.env` populated with CI variables (DB creds, URLs).
+    - Create `/srv/cfa/docker-compose.yml`. **IMPORTANT:** Use the structure from `docker-compose.yml` + `docker-compose.services.yml` + `docker-compose.apps.yml` but adapted for production (pulling images from Registry, not building).
+3.  Ensure ports are mapped correctly (Gateway: 80/443 or 55000, Portals: 3001-3003).
+
+**Verification:** SSH into `cfa2` and check if files exist and are valid.
+
+---
+
+### PHASE 3: DEPLOYMENT & HEALTH CHECK (J3)
+**Goal:** Start the stack and verify it works.
+
+**Tasks:**
+1.  Add `deploy` stage to `.gitlab-ci.yml`.
+2.  Job `deploy-cfa2`:
+    - SSH to `cfa2`.
+    - `docker login ...`
+    - `docker compose pull`
+    - `docker compose up -d`
+    - **Wait for health:** Loop with `curl localhost:55000/health` until 200 OK (or timeout).
+    - Check Portals: `curl localhost:3001` (should return HTML).
+
+**Verification:** Pipeline succeeds, and you can see running containers on `cfa2`.
+
+---
+
+### FINAL SELF-CHECK
+- [ ] Did you use the Root Build Context?
+- [ ] Are all services included?
+- [ ] Is the deployment automated (no manual file copying)?
+- [ ] Did you verify the application is actually running (not just "container started")?
+
+**START NOW. EXECUTE PHASE 1.**
+```
+
+---
+
+### 3. NEXT_STEPS_FOR_HUMAN
+
+1.  **Запустить агента** с этим промптом.
+2.  **Следить за пайплайнами:** Агент будет пушить изменения. Тебе нужно открывать ссылки на пайплайны (он их выдаст) и смотреть, проходят ли билды.
+3.  **Ручное вмешательство:** Если агент застрянет на логике (например, не поймет, как склеить docker-compose файлы), я подскажу. Но промпт содержит инструкцию адаптировать их.
+
+```mermaid
+graph TD
+    A[Agent on eywa1] -->|1. Edit CI Config| B(GitLab Repo)
+    B -->|Trigger| C{GitLab Runner vds1}
+    C -->|Phase 1| D[Build & Push Images]
+    D --> E[GitLab Registry]
+    C -->|Phase 2| F[SSH to cfa2]
+    F -->|Generate Config| G[cfa2 /srv/cfa]
+    F -->|docker compose pull/up| H[Start Containers]
+    H -->|Phase 3| I[Health Check curl]
+```
