task(cicd) context

--- a/memory-bank/Scrum/20251126/20251126-2340-gpt5p-cicd.oracle.md
+++ b/memory-bank/Scrum/20251126/20251126-2340-gpt5p-cicd.oracle.md
@@ -129,7 +129,7 @@ ois-cfa (develop) ❯
 
 * [ ] Ветка `dev-cfa2` (или `infra-ci-setup` → `dev-cfa2`) с рабочим CI:
 
-  * [ ] Jobs build-<service> для всех нужных бэков проходят и пушат образы в GitLab Registry.
+  * [ ] Jobs build-`<service>` для всех нужных бэков проходят и пушат образы в GitLab Registry.
   * [ ] Job deploy-cfa2 руками запускается из UI и поднимает все backend сервисы на `cfa2` (Swagger доступен).
 * [ ] docker-compose для `cfa2` лежит в репо в `deploy/docker-compose-at-vps/cfa2/docker-compose.yml`, а на `cfa2` только синкается (без автогенерации из CI).
 * [ ] Фронты issuer/investor/backoffice деплоятся и доступны через gateway (пока можно IP+порт, домены через Cloudflare – отдельная фаза).
@@ -200,6 +200,18 @@ MUST READ BEFORE ANY EDIT:
 - ops/gitlab-ci.md or similar CI docs (if present).
 - architecture/ois-cfa.reposcan.json (to understand services/apps structure).
 - tasks/NX-05..NX-08-*.md (only to understand UX/flows, not to implement features).
+ADITIONAL IF NEEDED:
+- memory-bank/Scrum/20251126/20251126-pack/20251126-2330-CICD-thread-chatgpt-gpt5p.oracle.json.json
+- memory-bank/Scrum/20251126/20251126-pack/c2p_architecture.txt
+- memory-bank/Scrum/20251126/20251126-pack/c2p_deploy.txt
+- memory-bank/Scrum/20251126/20251126-pack/c2p_uk1.txt
+  memory-bank/Scrum/20251126/20251126-1111-trees/20251126-1110-structure-repo-apps-L2.tree.txt
+memory-bank/Scrum/20251126/20251126-1111-trees/20251126-1110-structure-repo-L2.tree.txt
+memory-bank/Scrum/20251126/20251126-1111-trees/20251126-1110-structure-repo-services-L2.tree.txt
+- memory-bank/snapshots-aggregated-context-duplicates/composers/repomix/20251125-1150-repomix-curated.xml
+  - commits analyse
+  - composer Сейчас алиасы/конфиги (composer-aliases.sh, composer-config.yaml, hbs, git-report-config/presets) заточены под CFA (пути include_sets, исключения, архитектурные globs, repo_root). 
+- scripts/git-changes-reporter.py  Конфиги: scripts/git-report-config.yaml, scripts/git-report-presets.yaml , memory-bank/Scrum/20251122/composers/20251123-1710-composer-aliases-readme.md 
 
 ---
 
@@ -231,7 +243,7 @@ J5. Update deploy documentation and cheatsheets so humans and other agents can r
   - the pipeline stages and jobs,
   - deployment flow to cfa2,
   - basic URLs and health endpoints on cfa2,
-  - Cloudflare helper usage for cfa2 (telex.global) referencing c2p_deploy.txt.
+  - Cloudflare helper usage for cfa2 (telex.global) referencing c2p_deploy.txt. (cloudflare access ` /home/user/__Repositories/cloudflare__developerisnow/.env` check on eywa1 cloudflare cli/api I've did it already other domains with that)
 
 ---
 
