--- a/memory-bank/Scrum/20251126-cicd-cfa2/20251126/20251126-2223-gpt5p-cicd.oracle.md
+++ b/memory-bank/Scrum/20251126-cicd-cfa2/20251126/20251126-2223-gpt5p-cicd.oracle.md
@@ -333,7 +333,7 @@ flowchart LR
 ```markdown
 ROLE: Senior DevOps engineer
 LOCATION: eywa1 control plane
-TARGETS: vds1 as GitLab runner, cfa2 as dev host
+TARGETS: vds1 as GitLab runner, cfa2 as dev host, eywa1 current workspaces ubuntu vps where you're running
 REPO PATH: /home/user/__Repositories/yury-customer/prj_Cifra-rwa-exachange-assets/repositories/customer-gitlab/ois-cfa
 
 CONTEXT:
